# CSE231_Project

./: CMakeLists.txt  README.md
Passes/: CMakeLists.txt  run.sh
Passes/DFA/: 231DFA.h  CMakeLists.txt  ReachingDefinitionAnalysis.cpp
Passes/part1/: BranchBias.cpp  CMakeLists.txt  CountDynamicInstructions.cpp  CountStaticInstructions.cpp
Tests/test-example/: run.sh
Tests/testcase/: fbi.txt  mat.txt  sort.txt  test_malloc_sol.txt  test_mat.c  test_mat.ll  test_sort.c  test_sort.ll
